added overlay modal, separated ui styles by element type

--- a/_source/css/sass/_mootor.ui.scss
+++ b/_source/css/sass/_mootor.ui.scss
@@ -1,420 +1,12 @@
 
+// User Interface plugins
 
-// extended classes 
-
-.moo-ui-input-container {
-    @include float-right;
-    border: 1px solid #666;
-    border-radius: 5px;
-    background-color: #FFF;
-    position: relative;
-    width: 75%;
-}
-.moo-ui-input {
-    -webkit-appearance:none;  /* Remove default iOS shadow */
-    border: none; 
-    background: none; 
-    font-size: 1.5em; 
-    line-height: 1.5em;
-    width: 100%;
-}
-
-// Standard form
-
-.moo-ui-form {
-    text-align: left;
-    width: 90%;
-    margin: 0 auto;
-    background-color: #FFF;
-    border: 1px solid #CCC;
-    border-radius: 5px;
-    @extend .clearfix;
-    .moo-field {
-        display:block;
-        @extend .clearfix;
-        padding: 1em 2em;
-        border-top: 1px solid #CCC;
-        &:first-child { border-top: none }
-        > label, legend {
-            @include float-left;
-            font-size: 2em;
-            font-weight: 700;
-            width: 25%;
-        }
-    }
-    .moo-ui-text {
-        @extend .moo-ui-input-container;
-        padding: 0.25em 2.25em 0.25em 0.25em; 
-        input { @extend .moo-ui-input; }
-    }
-    .moo-ui-textarea {
-        @extend .moo-ui-input-container;
-        padding: 0.25em; 
-        textarea { @extend .moo-ui-input; }
-    }
-    .moo-ui-select-container,
-    .moo-ui-select-container-multiple {
-        @extend .moo-ui-input-container;
-        padding: 0.25em; 
-        height: 3em;
-        z-index: 300;
-        .moo-ui-select-link {
-            color: #000;
-            font-size: 1.25em;
-            line-height: 2.25em;
-            text-align: right;
-            text-decoration: none;
-            display: block;
-            height: 100%;
-            padding: 0 0.5em;
-            position:relative;
-            right: 0;
-            z-index: 10;
-            &:after  {
-                @include background(linear-gradient(top, #FFF, #CCC));
-                border-top: 1px solid #666;
-                border-right: 1px solid #666;
-                border-bottom: 1px solid #666;
-                border-top-right-radius: 5px;
-                border-bottom-right-radius: 5px;
-                content: " "; 
-                display: block;
-                position: absolute;
-                top: -0.25em;
-                right: -0.25em;
-                width: 2.25em;
-                height: 2.25em;
-                z-index: -1;
-            }
-        }
-        .moo-ui-select-menu {
-            display: none;
-            background-color: #999;
-            border-radius: 5px;
-            padding: 1em;
-            position: absolute;
-        }
-        .moo-ui-select-list {
-            font-size: 2em;
-            background: #FFF;
-            border-radius: 5px;
-            overflow-y: scroll;
-            li {
-                padding: 1em ;
-                border-bottom: 1px solid #CCC;
-                white-space: nowrap;
-                &:last-child { border: none;}
-                &.selected {
-                    @include background(linear-gradient(top, #DAEAEC, #CEE3E6));
-                    border-top-color:#AEBBBD;
-                    border-bottom-color:#AEBBBD;
-                    color: #3F8D94;
-                }
-            }
-        }
-        &.moo-bottom {
-            .moo-ui-select-menu{
-                top:4.5em;
-                &:before {
-                    content: "";
-                    display: block;
-                    position: absolute;
-                    top: -3em;
-                    left: 25%;
-                    border-top: 15px solid transparent;
-                    border-left: 20px solid transparent;
-                    border-right: 20px solid transparent;
-                    border-bottom: 15px solid #999;
-                }
-            }
-        }
-        &.moo-top {
-            .moo-ui-select-menu {
-                bottom: 4.5em;
-                &:after {
-                    content: " ";
-                    display: block;
-                    position: absolute;
-                    bottom: -3em;
-                    left: 25%;
-                    border-bottom: 1.5em solid transparent;
-                    border-left: 2em solid transparent;
-                    border-right: 2em solid transparent;
-                    border-top: 1.5em solid #999;
-                }
-            }
-        }
-    }   
-    /*
-    *  Cleanbox is the styling of the icon link used to "clean" a text input
-    */
-    .cleanbox {
-        display: block;
-        padding: 0.35em;
-        position: absolute;
-        top: 0;
-        right: 0;
-        color: #666;
-        font-size: 2em;
-        font-weight: 700;
-        text-decoration: none;
-    }
-    .moo-ui-radio {
-        @include float-right;
-        position: relative;
-        width: 75%;
-        input{ 
-            position:absolute;
-            top: 0.5em;
-            left: 0.5em;
-        }
-        label {
-            position: relative;
-            display: block;
-            padding: 0.5em 0.5em 0.5em 2em;
-            background: #FFF;
-            font-size: 1.4em;
-            .moo-ui-radio-icon {
-                display: block;
-                position: absolute;
-                left: 0.5em;
-                top: 0.5em;
-                background-color: #CCC;
-                border: 1px solid #999;
-                border-radius: 8px;
-                width: 1em;
-                height: 1em;
-                &.moo-radio-active {
-                    background-color: #666;
-                    &:after {
-                        content: " ";
-                        display: block;
-                        position: absolute;
-                        top: 0.2em;
-                        left: 0.2em;
-                        @include background(radial-gradient(#FFF, #A6C9FD 6px));
-                        border-radius: 4px;
-                        @include single-box-shadow(#666, 0, 0, 2px, 2px);
-                        width:0.6em;
-                        height: 0.6em;
-                    }
-                }
-            }
-        }
-    }
-    .moo-ui-checkbox {
-        @include float-right;
-        position: relative;
-        width: 75%;
-        input { 
-            position:absolute;
-            top: 0.5em;
-            left: 0.5em;
-        }
-        label {
-            position: relative;
-            display: block;
-            padding: 0.5em 0.5em 0.5em 2em;
-            background: #FFF;
-            font-size: 1.4em;
-            .moo-ui-checkbox-icon {
-                display: block;
-                position: absolute;
-                left: 0.5em;
-                top: 0.5em;
-                background-color: #CCC;
-                border: 1px solid #999;
-                width: 1em;
-                height: 1em;
-                &.moo-checkbox-active {
-                    background-color: #666;
-                    &:after {
-                        content: " ";
-                        display: block;
-                        position: absolute;
-                        top: 0.2em;
-                        left: 0.2em;
-                        @include background(linear-gradient(top, #FFF, #BDD7FD));
-                        @include single-box-shadow(#666, 0, 0, 2px, 2px);
-                        width:0.6em;
-                        height: 0.6em;
-                    }
-                }
-            }
-        }
-    }
-}
-
-// User Interface plugin
-
-// Checkbox
-.moo-ui-switch {
-    @include background-image(linear-gradient(top, #888, #bbb 65%));
-    border: 1px solid #666;
-    border-radius: 0.5em;
-    @include float-right;
-    overflow: hidden;
-    width: 9em;
-    height: 2.8em;
-    b {
-        font-size: 1.5em;
-        font-weight: 700;
-        line-height: 175%;
-        text-align: center;
-        @include background-image(linear-gradient(top, #fff, #dedede));
-        border: 1px solid #666;
-        border-radius: 0.33em;
-        display: block;
-        width: 1.9em;
-        height: 110%;
-        position: relative;
-        top: -5%;
-        right: -0.04em;
-        -webkit-transition-duration: .25s;
-        -webkit-transform: translate3d(4.05em, 0, 0);
-        &:before { 
-            content: "I";
-            border-radius: 0.35em 0 0 0.35em;
-            //background-color: rgba(66,66,66,.5);
-            color: #FFF;
-            font-weight: 700;
-            display: block;
-            height: 100%;
-            width: 4.15em;
-            position: relative;
-            top: 0;
-            left: -4.15em;
-            z-index: -1;
-        }
-        &:after {
-            content: "O";
-            //background: rgba(200, 0, 0, 0.3);
-            border-radius: 0 0.35em 0.35em 0;
-            color: #333;
-            display: block;
-            height: 100%;
-            width: 4.15em;
-            position: absolute;
-            right: -4.15em;
-            top: 0;
-        }
-    }
-    &.off{
-        @include background-image(linear-gradient(top, #ddd, #fff 45%));
-         left: -0.04em;
-        b {
-            -webkit-transform: translate3d(0, 0, 0);
-        }
-    }
-
-}
-
-// Tooltip
-.moo_tooltip {
-    position: absolute;
-    background: $subColor1;
-    border: 1px solid $subColor1B;
-    padding: 1em;
-    text-align: center;
-}
-
-// Overlay controls
-
-.moo-overlay {
-    background-color: rgba(0,0,0,0.3);
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: 500;
-}
-
-/*
-* Loading animation 
-* -----------------------------------------------------------------------------------------
-*/
-
-/*
-* Editable styles
-* Change this styles to position/resize the element as needed.
-* 1. base (darkest) color. The gradient palette derives from this color.
-* 2. Position of the center point of the animation. 
-     Place wherever is needed, by default is in the center of its parent container.
-* 3. The overall size of the loading is relative to this value.
-* 4. Animation speed
-*/
-
-$background-color: #000;  /*1*/
-.moo-ui-loading {
-    position: absolute;/*2*/
-    top: 50%;/*2*/
-    left: 50%;/*2*/
-    font-size: 1em; /*3*/
-    -webkit-animation-duration:1.5s;/*4*/
-}
-
-/*
-* Base styles
-*/
-
-.moo-ui-loading {
-    width: 0;
-    height: 0;
-    z-index: 550;
-    -webkit-animation-name: rotateThis;
-    -webkit-animation-duration:1.5s;
-    -webkit-animation-iteration-count:infinite;
-    -webkit-animation-timing-function:linear;
-    .moo-ui-loading-block {
-        height: 2.5em;
-        width: 1em;
-        float: left;
-        position:absolute;
-        top: -1.25em;
-        left: -0.5em;
-    }
-    .moo-loading-01 {
-       -webkit-transform: rotate(-90deg) translate(0, -3em);
-       background-color: lighten($background-color, 100%);
-    }
-    .moo-loading-02 {
-        -webkit-transform: rotate(-45deg) translate(0, -3em);
-         background-color: lighten($background-color, 87.5%);
-    }
-    .moo-loading-03 {
-        -webkit-transform: rotate(0deg) translate(0, -3em);
-         background-color: lighten($background-color, 75%);
-    }
-    .moo-loading-04 {
-        -webkit-transform: rotate(45deg) translate(0, -3em);
-         background-color: lighten($background-color, 62.5%);
-    }
-    .moo-loading-05 {
-        -webkit-transform: rotate(90deg) translate(0, -3em);
-         background-color: lighten($background-color, 50%);
-    }
-    .moo-loading-06 {
-        -webkit-transform: rotate(135deg) translate(0, -3em);
-         background-color: lighten($background-color, 37.5%);
-    }
-    .moo-loading-07 {
-        -webkit-transform: rotate(180deg) translate(0, -3em);
-         background-color: lighten($background-color, 25%);
-    }
-    .moo-loading-08 {
-        -webkit-transform: rotate(-135deg) translate(0, -3em);
-         background-color: lighten($background-color, 12.5%);
-    } 
-}
-
-@-webkit-keyframes rotateThis {
-  from {-webkit-transform:  rotate(0deg);}
-  to {-webkit-transform: rotate(360deg);}
-}
+@import "mootor.ui.form";
+@import "mootor.ui.switch";
+@import "mootor.ui.tooltip";
+@import "mootor.ui.overlay";
+@import "mootor.ui.loading";
+@import "mootor.ui.modal";
 
 
-/*
-* Overlay Modal
-*/
 
