--- a/_source/css/sass/_mootor.ui.modal.scss
+++ b/_source/css/sass/_mootor.ui.modal.scss
@@ -12,6 +12,10 @@
     width: 0;
     height: 0;
     z-index: 1050;
+    
+    &.moo-hidden {
+        display: none;
+    }
 }
 .moo-ui-modal-panel {
     border: 3px solid #CCC;
