started styles for modal-image

--- a/_source/css/sass/_mootor.ui.modal.scss
+++ b/_source/css/sass/_mootor.ui.modal.scss
@@ -39,6 +39,7 @@
         font-size: 1.5em;
         line-height: 120%;
         padding: 0;
+        margin: 1em;
     }
     .moo-buttons { overflow: hidden;}
     .moo-ui-cancel, 
